

noinst_PROGRAMS = arith arith_encode arith_decode codes


arith_CFLAGS = $(CARID_CFLAGS)
arith_LDADD = $(CARID_LIBS)
arith_SOURCES = arith.c

arith_encode_CFLAGS = $(CARID_CFLAGS)
arith_encode_LDADD = $(CARID_LIBS)
arith_encode_SOURCES = arith_encode.c

arith_decode_CFLAGS = $(CARID_CFLAGS)
arith_decode_LDADD = $(CARID_LIBS)
arith_decode_SOURCES = arith_decode.c

codes_CFLAGS = $(CARID_CFLAGS)
codes_LDADD = $(CARID_LIBS)
codes_SOURCES = codes.c


