

noinst_PROGRAMS = arith arith_encode arith_decode codes bits bits2 wavelet wavelet2 tables wavelet_2d

TESTS = arith arith_encode arith_decode codes bits bits2 wavelet wavelet2 tables wavelet_2d


arith_CFLAGS = $(CARID_CFLAGS)
arith_LDADD = $(CARID_LIBS)
arith_SOURCES = arith.c

arith_encode_CFLAGS = $(CARID_CFLAGS)
arith_encode_LDADD = $(CARID_LIBS)
arith_encode_SOURCES = arith_encode.c

arith_decode_CFLAGS = $(CARID_CFLAGS)
arith_decode_LDADD = $(CARID_LIBS)
arith_decode_SOURCES = arith_decode.c

codes_CFLAGS = $(CARID_CFLAGS)
codes_LDADD = $(CARID_LIBS)
codes_SOURCES = codes.c

bits_CFLAGS = $(CARID_CFLAGS)
bits_LDADD = $(CARID_LIBS)
bits_SOURCES = bits.c

bits2_CFLAGS = $(CARID_CFLAGS)
bits2_LDADD = $(CARID_LIBS)
bits2_SOURCES = bits2.c

wavelet_CFLAGS = $(CARID_CFLAGS)
wavelet_LDADD = $(CARID_LIBS)
wavelet_SOURCES = wavelet.c

wavelet2_CFLAGS = $(CARID_CFLAGS)
wavelet2_LDADD = $(CARID_LIBS)
wavelet2_SOURCES = wavelet2.c

wavelet_2d_CFLAGS = $(CARID_CFLAGS)
wavelet_2d_LDADD = $(CARID_LIBS)
wavelet_2d_SOURCES = wavelet_2d.c

tables_CFLAGS = 
tables_LDADD = -lm
tables_SOURCES = tables.c



